fixed alignment of koth admin buttons

--- a/src/App.css
+++ b/src/App.css
@@ -623,7 +623,7 @@ form {
   height : 80%;
 }
 
-.adminButton:not(:first-child) {
+.adminButton {
     margin-left : 0.5vw;
 }
 
